[package]
name = "loxido"
version = "0.1.0"
authors = ["Manuel Cerón <ceronman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug_stress_gc"]
debug_log_gc = []
debug_stress_gc = []

[dependencies]
lazy_static = "1.4.0"
cpu-time = "1.0.0"