[package]
name = "loxido"
version = "0.1.0"
authors = ["Manuel Cerón <ceronman@gmail.com>"]
edition = "2018"

[features]
default = []
debug_log_gc = []
debug_stress_gc = []
debug_trace_execution = []

[dependencies]
ahash = "0.7.2"
cpu-time = "1.0.0"

[dev-dependencies]
regex = "1.4.5"
test-generator = "0.3.0"